classDiagram
    namespace MainPackage {
        class Main {
            -static instance: Main
            +main(args: String[]) void
            +init(args: String[]) void
            +allocateMemory(args: String[]) void
            +launchApplication() void
        }
    }

    namespace Formatters {
        class MenuFormatter {
            +displayMainMenu() void
        }
        class GameCollectionFormatter {
            +viewAllGames() void
        }
    }

    namespace Services {
        class DateGestion {
            +isWeekEnd(): boolean
            +getDay()
            +getMonth()
        }

        class MenuLogic {
            +verificationIsNumber(input: String)
            +verificationIsString(input: String)
            +isValidString(input: String)
            +isValidNumber(input: String)
            +duplicateVerification(input: String)
        }

        class MenuService {
            +getRandom(n: int)
            +addGame()
            +viewAllGames()
            +init()
            +handleMenu(dao: GameCollectionDao)
            +summaryWeekEnd()
        }

        class RandomStrategy {
            <<interface>>
            +getNRandomGames(n: int, dao: GameCollectionDao) List~BoardGame~
        }

        class RandomNElementStrategy {
            +getNRandomGames(n: int, dao: GameCollectionDao) List~BoardGame~
        }
        class LastNElementStrategy {
            +getNRandomGames(n: int, dao: GameCollectionDao) List~BoardGame~
        }
        class FirstNElementStrategy {
            +getNRandomGames(n: int, dao: GameCollectionDao) List~BoardGame~
        }
    }

    namespace Repositories {
        class GameCollectionDao {
            <<interface>>
            +save(game: BoardGame) boolean
            +findAll() List~BoardGame~
            +delete(title: String)
        }

        class GameCollectionDaoCSV {
            -fileName: String
            +save(game: BoardGame) boolean
            +findAll() List~BoardGame~
            +delete(title: String)
        }

        class GameCollectionDaoJSON {
            -fileName: String
            +save(game: BoardGame) boolean
            +findAll() List~BoardGame~
            +delete(title: String)
        }

        class GameCollectionDaoRAM {
            -games: List~BoardGame~
            +save(game: BoardGame) boolean
            +findAll() List~BoardGame~
            +delete(title: String)
        }
    }

    namespace Models {
        class BoardGame {
            <<record>>
            +title: String
            +minPlayers: int
            +maxPlayers: int
            +category: String
        }
    }

    %% Relations
    Main --> MenuService : <<démarre>>
    MenuService --> MenuFormatter : <<utilise>>
    MenuService --> GameCollectionFormatter : <<utilise>>
    MenuService --> DateGestion : <<gère>>
    MenuService --> MenuLogic : <<vérifie>>
    MenuService --> GameCollectionDao : <<utilise>>
    MenuService --> RandomStrategy : <<utilise>>

    RandomNElementStrategy ..|> RandomStrategy : <<implémente>>
    LastNElementStrategy ..|> RandomStrategy : <<implémente>>
    FirstNElementStrategy ..|> RandomStrategy : <<implémente>>

    GameCollectionDaoCSV ..|> GameCollectionDao : <<implémente>>
    GameCollectionDaoJSON ..|> GameCollectionDao : <<implémente>>
    GameCollectionDaoRAM ..|> GameCollectionDao : <<implémente>>

    GameCollectionDaoCSV --> BoardGame : <<utilise>>
    GameCollectionDaoJSON --> BoardGame : <<utilise>>
    GameCollectionDaoRAM --> BoardGame : <<utilise>>
    RandomStrategy --> BoardGame : <<utilise>>
